# inter_contract_call_example

./: Cargo.toml  Readme.Md
contract_a/: Cargo.toml
contract_a/src/: contract.rs  msg.rs
contract_b/: Cargo.toml
contract_b/src/: contract.rs  lib.rs  msg.rs  state.rs  utils.rs
